--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>snacks_restaurant </h1>
+    <h1> welcome to snacks-restaurant</h1>
+    <h2> this is your information</h2>
+    <div id ="hero">
     <script src="app.js">
 
     </script>
