Update HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> welcome to snacks-restaurant</h1>
-    <h2> this is your information</h2>
-    <div id ="hero">
+    <h1>  snacks-restaurant</h1>
+    <p>Welcome to snacks-restaurant website, your go-to destination for easy and professional catering!</p>
+   
     <script src="app.js">
 
     </script>
